# local-agent

./: .gitignore  MEMORY_SYSTEM.md  README.md  REFACTORING_NOTES.md  main.py  pyproject.toml
.claude/skills/pygents/: SKILL.md
.memory/: episodic.md  semantic.md  working.md
app/: config.py  factories.py  logger.py  poms.py  sessions.py  utils.py
app/agent/: __init__.py
app/agent/integrations/: calendar_service.py
app/agent/tools/: __init__.py  calendar.py  create_event.py  orchestrate.py  read_files.py  respond.py  think.py
app/agent/utils/: __init__.py  definitions.py  file_search.py
app/core/: __init__.py  config.py  factories.py  logger.py
app/hooks/: compact.py  memory.py  memory_after.py
app/hooks/tasks/: compact.py  episodic.py  semantic.py
app/logic/: compact.py  read_files.py  think.py
app/memory/: __init__.py  compact.py  dataclasses.py  episodic.md  episodic.py  format.py  hooks.py  queries.py  semantic.md  semantic.py  working.py
app/memory/extractors/: __init__.py  compact.py  episodic.py  semantic.py
app/storage/: __init__.py  database.py  example_usage.py
app/tools/: read_files.py  respond.py  think.py
integrations/: calendar.py
tests/: test_memory_items.py  test_read_files.py  test_sessions.py
