[project]
name = "local-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.5",
    "py-ai-toolkit>=0.5.1",
    "pydantic>=2.12.5",
    "pygents>=0.3.4",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "ruff>=0.15.0",
    "sqlmodel>=0.0.22",
    "tiktoken>=0.8.0",
]
